--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,4 +6,4 @@ pipelines:
         script:
           - apt-get update
           - apt-get -qq install git-ftp
-          - git ftp init --user $FTP_USERNAME --passwd $FTP_PASSWORD --syncroot _site ftp://ftp.tdwesten.nl/domains/tdwesten.nl/public_html
+          - git ftp push --user $FTP_USERNAME --passwd $FTP_PASSWORD --syncroot _site ftp://ftp.tdwesten.nl/domains/tdwesten.nl/public_html
