Monochome watches porject added
Signed-off-by: Thomas van der Westen <tdwesten@gmail.com>

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -1,9 +1,19 @@
 [
     {
+        "title": "Monochrome Watches",
+        "description": "Doorontwikkeling maatwerk WordPress thema",
+        "year": 2019,
+        "url": "https://monochrome-watches.com",
+        "role": "Frontend developer",
+        "employeur": "Jannes & Mannes",
+        "color": "#ccc",
+        "image_file": "monochrome_watches"
+    },
+    {
         "title": "Olco",
         "description": "Maatwerk WordPress thema",
         "year": 2018,
-        "url": "http://olco.nl/",
+        "url": "https://olco.nl/",
         "role": "Lead Frontend developer",
         "employeur": "Jannes & Mannes",
         "color": "#00e776",
@@ -13,7 +23,7 @@
         "title": "Helios Kampen",
         "description": "Maatwerk WordPress thema",
         "year": 2018,
-        "url": "http://helioskampen.nl/",
+        "url": "https://helioskampen.nl/",
         "role": "Lead Frontend developer",
         "employeur": "Jannes & Mannes",
         "color": "#e16526",
@@ -23,7 +33,7 @@
         "title": "Evry",
         "description": "Maatwerk WordPress thema",
         "year": 2018,
-        "url": "http://ervy.nl/",
+        "url": "https://ervy.nl/",
         "role": "Lead Frontend developer",
         "employeur": "Jannes & Mannes",
         "color": "#33c2d9",
@@ -33,7 +43,7 @@
         "title": "Studio ID+",
         "description": "Maatwerk WordPress thema",
         "year": 2017,
-        "url": "http://studioidplus.nl/",
+        "url": "https://studioidplus.nl/",
         "role": "Lead Frontend developer",
         "employeur": "Jannes & Mannes",
         "color": "#EBCD55",
@@ -43,7 +53,7 @@
         "title": "Redept",
         "description": "Maatwerk WordPress thema",
         "year": 2017,
-        "url": "http://redept.nl/",
+        "url": "https://redept.nl/",
         "role": "Frontend developer",
         "employeur": "Jannes & Mannes",
         "color": "#c33",
@@ -72,7 +82,7 @@
     {
         "title": "Goodarce",
         "description": "Maatwerk WordPress thema",
-        "url": "http://goodacre.nl",
+        "url": "https://goodacre.nl",
         "year": 2017,
         "role": "Lead & Frontend Developer",
         "employeur": "Jannes & Mannes",
